  * Remove trailing white space in all Python files.
  * apport/report.py, add_proc_info(): Do not regard symlinks to executables
    as interpreted scripts any more (such as Debian alternatives). Add test
    case. (LP: #94732)
  * problem_report.py: Add new method get_new() which returns a set of all
    keys which have been added since load() or construction. Add test cases.

  [ Kees Cook ]
  * apport/report.py, add_proc_info(): If reading /proc/pid/maps fails,
    ptrace() the target process to make it readable (proposed security
    improvement in future kernels).
  * bin/apport-retrace: Fix crash for packages unknown to the apt cache.
  * apport/report.py, add_gdb_info(): Limit maximum backtrace depth to 2000 to
    avoid infinitely looped stacks and gdb crashes. (LP: #94455)
    This also caps the maximum size of information that we add to reports.
    (LP: #92653)
  * bin/apport-retrace: Add option -R/--rebuild-package-info, so that
    apport-retrace works on unprocessed crash dumps in /var/crash.

  [ Michael Hofmann ]
  * Add cli/apport-cli, setup.py, debian/apport-cli.install, debian/control:
    Add command line user interface.
  * apport/ui.py, format_filesize(): Use MiB and GiB instead of MB and GB;
    these are the official units. Adapt test cases.
  * apport/ui.py, collect_info()/file_report(): Do not raise an exception on
    KeyboardInterrupt in the subthreads.
  * apport/ui.py, open_url(): Do not use gtk.MessageDialog(), but
    ui_error_message(), and fix error passing so that the message is
    displayed in the parent thread.
  * apport/ui.py, open_url(): Check that $DISPLAY is set before considering
    the KDE/Gnome web browsers.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 20:36:00 +0100

apport (0.69) feisty; urgency=low

  * apport-chroot: Add command 'installdeb' to conveniently install a bunch of
    .debs into a chroot.
  * apport-chroot: Fix 'login' and 'upgrade' commands to not require